<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <SwitchPreference
        android:defaultValue="false"
        android:key="evil_mode"
        android:summary="@string/evil_mode_summary"
        android:title="@string/evil_mode_title" />
    <SwitchPreference
        android:defaultValue="false"
        android:key="ignore_prebaked"
        android:summary="@string/ignore_prebaked_summary"
        android:title="@string/ignore_prebaked_title" />
    <EditTextPreference
        android:key="convo_repo"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:summary="@string/convo_repo_summary"
        android:title="@string/convo_repo_title" />
    <SeekBarPreference
        android:key="refresh_time"
        android:defaultValue="5"
        android:max="60"
        android:title="Time to refresh repo" />
</PreferenceScreen>
